[gd_scene load_steps=4 format=3 uid="uid://pmull6kic4om"]

[ext_resource type="Script" path="res://Scenes/Spawn/SpawnAsteroid.gd" id="1_bcnu0"]
[ext_resource type="PackedScene" uid="uid://c8hb4hefv0d0h" path="res://Scenes/Spawn/spawnlocation.tscn" id="2_qougc"]
[ext_resource type="Script" path="res://Scenes/Spawn/next_wave.gd" id="3_a6c74"]

[node name="World" type="Node2D"]
position = Vector2(525, -2)
script = ExtResource("1_bcnu0")

[node name="SpawnTimer" type="Timer" parent="."]
autostart = true

[node name="Marker2D" type="Marker2D" parent="." groups=["spawn"]]
position = Vector2(548, 0)

[node name="Marker2D2" type="Marker2D" parent="." groups=["spawn"]]
position = Vector2(172, 3)

[node name="Marker2D3" type="Marker2D" parent="." groups=["spawn"]]
position = Vector2(-400, 0)

[node name="Marker2D4" type="Marker2D" parent="." groups=["spawn"]]
position = Vector2(-223, 2)

[node name="Marker2D5" type="Marker2D" parent="." groups=["spawn"]]
position = Vector2(-58, 6)

[node name="Marker2D6" type="Marker2D" parent="." groups=["spawn"]]
position = Vector2(340, 2)

[node name="Marker2D7" type="Marker2D" parent="." groups=["spawn"]]
position = Vector2(69, 2)

[node name="spawnlocation" parent="." instance=ExtResource("2_qougc")]
position = Vector2(71, 1)

[node name="UI" type="Node2D" parent="."]
z_index = 2
position = Vector2(-520, 7)

[node name="Control" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="wave-text" type="Label" parent="UI/Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Puntuaci√≥n:"
uppercase = true

[node name="next_wave" type="Label" parent="UI/Control"]
layout_mode = 0
offset_left = 113.0
offset_right = 126.0
offset_bottom = 23.0
text = "0"
uppercase = true
script = ExtResource("3_a6c74")

[node name="Next_wave-text" type="Label" parent="UI/Control"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 479.0
offset_top = 287.0
offset_right = 628.0
offset_bottom = 310.0
grow_horizontal = 2
grow_vertical = 2
text = "Siguiente Oleada"
uppercase = true

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
